Fixed profile text alignment

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -240,7 +240,7 @@ td {
 }
 
 .text-m {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .text-l {
@@ -252,7 +252,7 @@ td {
 }
 
 .text-2xl {
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .text-4xl {
